[gd_scene load_steps=10 format=2]

[ext_resource path="res://level/HpBar.gd" type="Script" id=1]
[ext_resource path="res://assets/Hp/Health6.png" type="Texture" id=2]
[ext_resource path="res://assets/Hp/Health0.png" type="Texture" id=3]
[ext_resource path="res://assets/Hp/HpText.png" type="Texture" id=4]
[ext_resource path="res://assets/Hp/Health1.png" type="Texture" id=5]
[ext_resource path="res://assets/Hp/Health4.png" type="Texture" id=6]
[ext_resource path="res://assets/Hp/Health3.png" type="Texture" id=7]
[ext_resource path="res://assets/Hp/Health2.png" type="Texture" id=8]
[ext_resource path="res://assets/Hp/Health5.png" type="Texture" id=9]

[node name="HpBar" type="Node2D"]
script = ExtResource( 1 )

[node name="Health0" type="Sprite" parent="."]
visible = false
position = Vector2( 157, 4 )
texture = ExtResource( 3 )

[node name="Health1" type="Sprite" parent="."]
visible = false
position = Vector2( 157, 4 )
texture = ExtResource( 5 )

[node name="Health2" type="Sprite" parent="."]
visible = false
position = Vector2( 157, 4 )
texture = ExtResource( 8 )

[node name="Health3" type="Sprite" parent="."]
visible = false
position = Vector2( 157, 4 )
texture = ExtResource( 7 )

[node name="Health4" type="Sprite" parent="."]
visible = false
position = Vector2( 157, 4 )
texture = ExtResource( 6 )

[node name="Health5" type="Sprite" parent="."]
position = Vector2( 157, 4 )
texture = ExtResource( 9 )

[node name="Health6" type="Sprite" parent="."]
visible = false
position = Vector2( 157, 4 )
texture = ExtResource( 2 )

[node name="HpText" type="Sprite" parent="."]
position = Vector2( 155.954, -122.5 )
scale = Vector2( 0.17035, 0.17035 )
texture = ExtResource( 4 )

[node name="OpHealth0" type="Sprite" parent="."]
position = Vector2( 157.5, -1441 )
texture = ExtResource( 3 )

[node name="OpHealth1" type="Sprite" parent="."]
position = Vector2( 157.5, -1440 )
texture = ExtResource( 5 )

[node name="OpHealth2" type="Sprite" parent="."]
position = Vector2( 157.5, -1440 )
texture = ExtResource( 8 )

[node name="OpHealth3" type="Sprite" parent="."]
position = Vector2( 157.5, -1440 )
texture = ExtResource( 7 )

[node name="OpHealth4" type="Sprite" parent="."]
position = Vector2( 157.5, -1440 )
texture = ExtResource( 6 )

[node name="OpHealth5" type="Sprite" parent="."]
position = Vector2( 157.5, -1439 )
texture = ExtResource( 9 )

[node name="OpHealth6" type="Sprite" parent="."]
position = Vector2( 158, -1440 )
texture = ExtResource( 2 )

[node name="OpHpText" type="Sprite" parent="."]
position = Vector2( 158.47, -1563.75 )
scale = Vector2( 0.171731, 0.171731 )
texture = ExtResource( 4 )
